# lettaonsteroids

./: .env.example  .gitignore  ADDITIONAL_TESTS.md  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  README.md  TEST_DOCUMENTATION.md  agent.id  dashboard.py  letta_openapi.json  requirements.txt  run_benchmarks.bat  run_benchmarks.sh
.claude/: settings.local.json
letta_hybrid_poc/: .env.example  .gitignore  API_README.md  CHANGELOG.md  FAIR_COMPARISON.md  GEMINI.md  MEM0_SETUP.md  README.md  dashboard.css  dashboard.html  dashboard.js  error_log.txt  example_client.html  example_client.py  output.txt  package-lock.json  pyproject.toml  run_eval.py  run_tests.bat  start_server.bat  test_imports.py  test_openai.py
letta_hybrid_poc/.claude/: settings.local.json
letta_hybrid_poc/data/cache/: .gitkeep
letta_hybrid_poc/data/index/: .gitkeep
letta_hybrid_poc/data/qdrant/: meta.json
letta_hybrid_poc/data/qdrant/collection/letta_eval/: storage.sqlite
letta_hybrid_poc/data/raw/: corpus.json
letta_hybrid_poc/scripts/: dev_setup.ps1
letta_hybrid_poc/src/: __init__.py
letta_hybrid_poc/src/adapters/: llm_ollama.py  llm_openai.py
letta_hybrid_poc/src/api/: __init__.py  eval_runner.py  server.py
letta_hybrid_poc/src/cli/: chat.py  ingest.py
letta_hybrid_poc/src/controller/: policies.py  tools.py
letta_hybrid_poc/src/core/: letta_controller.py  memory.py
letta_hybrid_poc/src/eval/: eval.py
letta_hybrid_poc/src/retrieval/: index.py  rerank.py
src/: benchmark.py  config.py  scenarios.py
src/backends/: base.py  letta.py  mem0.py
